# pngtojpeg

./: CMakeLists.txt  LICENSE  main.cpp  main.h
test/: test1.xcf  test3.xcf
